# clang-build-profiler

./: .clang-build-profiler  .clang-format  .clangd  .gitattributes  .gitignore  404.html  CMakeLists.txt  CMakePresets.json  LICENSE.html  actions.sh  building_locally.html  cli_arguments.html  configuration_file.html  getting_started.html  index.html  mkdocs.yml  sitemap.xml  technical_limitations.html
.github/workflows/: build.yml  deploy_pages.yml  macos.yml  ubuntu.yml  windows.yml
bash/: run_static_analysis.sh  variables.sh
cmake/: CMakeRC.cmake
docs/: README.md  building_locally.md  cli_arguments.md  configuration_file.md  getting_started.md  technical_limitations.md
docs/mkdocs/: relative_links.js
include/: analyze.hpp  config.hpp  demangle.hpp  display_string.hpp  exception.hpp  json.hpp  prettify.hpp  profile.hpp  time.hpp  trace.hpp  tree.hpp
include/backend/: analyze.hpp  config.hpp  invoke.hpp  merge.hpp  profile.hpp  trace.hpp  tree.hpp
include/frontend/: formatter.hpp  generic.hpp  html.hpp  json.hpp  mkdocs.hpp  preprocessor.hpp  terminal.hpp  text.hpp
include/utility/: colors.hpp  demangle.hpp  embedded.hpp  exception.hpp  filepath.hpp  json.hpp  lookup.hpp  prettify.hpp  replace.hpp  time.hpp  version.hpp
resources/html/: report.html
resources/mkdocs/: mkdocs.yml
resources/mkdocs/docs/: admonitions.css  classes.css
search/: search_index.js  search_index.json
source/: analyze.cpp  colors.cpp  config.cpp  demangle.cpp  display_string.cpp  main.cpp  prettify.cpp  tree.cpp  version.cpp
source/backend/: analyze.cpp  config.cpp  invoke.cpp  merge.cpp
source/frontend/: html.cpp  json.cpp  mkdocs.cpp  preprocessor.cpp  terminal.cpp  text.cpp
source/utility/: colors.cpp  demangle.cpp  embedded.cpp  filepath.cpp  lookup.cpp  prettify.cpp  replace.cpp  version.cpp
tests/: common.hpp  main.cpp
tests/data/files/: analyze.cpp.json  main.cpp.json  prettify.cpp.json
